# mv-temporal-rgan

./: .#data.py  .#todos.md  .gitignore  LICENSE  README.md  RGAN.py  THIRD_PARTY_NOTICES.txt  combine_logs.py  data.py  gg.R  init.sh  pre-process-faces.py  pyproject.toml  requirements.txt  run.py  todos.md  todos.org  train.py  vis.py
2019_10_13_14_54_00_RGAN_mnist/: init.csv  log.csv
data/: .gitignore  lfw_setup.sh
docs/: todos.md  todos.org
hooks/: pre-commit  pre-commit.sample
pickles/: .gitignore
pickles/test/: init.csv  log.csv
pickles/test/img/: readme.txt
src/: .gitignore  README.md  combine_logs.py  combine_prune_logs.py  faces.sh  gg.R  init.sh  pre-process-faces.py  pre_process_faces.py  requirements.txt  train.py  vis.py
src/data/: .gitignore  readme.txt
src/docs/: RGAN_performance_1.md  RGAN_performance_v1.md  RGAN_v1_performance.md  RGAN_v2.md  RGAN_v3.md  RGAN_v4.md  combine_logs.md  combine_prune_logs.md  data_acquisition.md  model_training.md  visualization.md
src/docs/RCGAN/: RCGAN_v1.md  RCGAN_v2.md  RCGAN_v3.md  RCGAN_v4.md
src/docs/RGAN/: RGAN_v1.md  RGAN_v2.md  RGAN_v3.md  RGAN_v4.md  RGAN_v5.md
src/pickles/: .gitignore
