[tool.poetry]
name = "mv-temporal-rgan"
version = "0.1.0"
description = ""
authors = ["Atreya Shankar <35427332+atreyasha@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pandas = "0.25.3"
numpy = "1.18.1"
scipy = "1.4.1"
pygifsicle = "1.0.1"
tensorflow-gpu = "2.12.0"
matplotlib = "3.1.2"
tqdm = "4.28.1"
imageio = "2.6.1"
Keras = "2.3.1"
Pillow = "8.1.1"
PyYAML = "5.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
